# aws-rust-assume-role-with-mfa

./: Cargo.toml  README.md
src/: assume_role_with_mfa_trait.rs  lib.rs  main.rs
