[package]
name = "rust_diggity_aws_auth"
version = "0.1.0"
edition = "2024"

[lints.rust]
non_snake_case = "allow"

[lints.clippy]
upper_case_acronyms = "allow"

[[bin]]
name = "rust_diggity_aws_auth"
path = "src/main.rs"

[dependencies]
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-sts = "1"
aws-credential-types = "1"
tokio = { version = "1", features = ["full"] }
aws-sdk-s3 = "1" # Explicitly add S3 for the binary
aws-smithy-types = "1.3.4"
aws-types = "1.3.9"

[dev-dependencies]
libc = "*"
walkdir = "*"
regex = "*"
